# RB-Publication-Try

./: CMakeLists.txt  index.html  style.css
RB Publication/: README.md  build.bat  build.sh  index.html  package.json  script.js
RB Publication/src/: content_manager.h  database.cpp  main.cpp  simple_server.h
src/: admin_panel.cpp  admin_panel.h  content_manager.cpp  database.h
static/: admin.css  admin.js  script.js  style.css
